--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -14,6 +14,8 @@ outputs:
 runs:
   using: 'composite'
   steps:
+     - name: Checkout
+        uses: actions/checkout@v2
     - name: Install Python
       uses: actions/setup-python@v4
       with:
